1,add webroot key

--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -18,6 +18,11 @@
 			/WEB-INF/app.xml
 		</param-value>
 	</context-param>
+	
+	<context-param>
+		<param-name>webAppRootKey</param-name>
+		<param-value>yiliang</param-value>
+	</context-param>
 
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
@@ -131,5 +136,6 @@
         <servlet-name>OrganizationTreeServlet</servlet-name>
         <url-pattern>/OrganizationTreeServlet</url-pattern>
     </servlet-mapping>	
+	
 
 </web-app>
